--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     -->
     <title>✦✧  Halcyon ✧✦</title>
   </head>
-  <body>
+  <body class="base64">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
