Add audio controls

--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <div style="display:none;">
-    <div>
+    <audio controls loop>
+      <source src="website_riff.mp3" type="audio/mp3"/>
+    </audio>
     <link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kosugi&display=swap" rel="stylesheet">
   </body>
